--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ header {
 }
 
 img {
-  text-align:center;
-  margin: 0 auto;
+  display: block;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 nav>a {
