--- a/style.css
+++ b/style.css
@@ -9,9 +9,10 @@ header {
 }
 
 img {
-  display: block;
+  margin: 0 auto;
+  /*display: block;
   margin-left:auto;
-  margin-right:auto;
+  margin-right:auto;*/
 }
 
 nav>a {
@@ -32,7 +33,18 @@ p {
 }
 
 #details {
+  display:block;
   text-align: center;
   float: left;
   width:25%
+}
+
+#details div{
+  float:left;
+  width:25%;
+}
+
+#details h3{
+  float:left;
+  width:25%;
 }
