--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ figcaption {
 }
 
 #details div {
-  background-color: red;
+  background-color: lightgrey;
   display:block;
   float:left;
   width:25%;
